[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64 = "0.22.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures.workspace = true
futures-util = "0.3.31"
log.workspace = true
rand.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
vaultrs = "0.7.3"

[lints]
workspace = true
